--- a/.gitignore
+++ b/.gitignore
@@ -8,16 +8,22 @@
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/workspace.xml
 .idea/**/tasks.xml
+.idea/tasks.xml
 .idea/**/usage.statistics.xml
+.idea/usage.statistics.xml
 .idea/**/dictionaries
+.idea/dictionaries
 .idea/**/shelf
+.idea/shelf
 
 # Generated files
 .idea/**/contentModel.xml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
+.idea/dataSources/
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
@@ -28,6 +34,7 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+.idea/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
