--- a/pjtblockchain/common/pom.xml
+++ b/pjtblockchain/common/pom.xml
@@ -42,5 +42,11 @@
             <version>2.11.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+        </dependency>
+
     </dependencies>
 </project>
