--- a/pjtblockchain/client/pom.xml
+++ b/pjtblockchain/client/pom.xml
@@ -10,19 +10,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>client</artifactId>
+    <name>Wallet</name>
+    <description>Module qui permet d'interagir avec le node (wallet)</description>
+    <packaging>jar</packaging>
 
     <dependencies>
 
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
         </dependency>
 
         <dependency>
             <groupId>com.supinfo</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
 
             <exclusions>
                 <exclusion>
@@ -31,7 +32,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
     </dependencies>
 
 </project>
