--- a/pjtblockchain/client/pom.xml
+++ b/pjtblockchain/client/pom.xml
@@ -15,10 +15,22 @@
     <packaging>jar</packaging>
 
     <dependencies>
-
+        <!--Parse des ligne de commande-->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
+        </dependency>
+
+        <!--Spring application-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <!--Injection web Spring-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
         </dependency>
 
         <dependency>
