--- a/pjtblockchain/package/src/main/resources/cfg/wallet.properties
+++ b/pjtblockchain/package/src/main/resources/cfg/wallet.properties
@@ -1,20 +1,10 @@
-## Keypair param
-#key.private=[PRIVATE_KEY]
-#key.public=[PUBLIC_KEY]
-#
-## Save history
-#save.file.address.hash=[SAVE_FILE_ADDRESS_HASH]
-#save.file.transaction.hash=[SAVE_FILE_TRANSACTION_HASH]
-#
-## The node to use with the wallet
-#node.local.address:[NODE_ADDRESS]
+# Keypair param
+key.private=[PRIVATE_KEY]
+key.public=[PUBLIC_KEY]
 
-# Wallet param
-key.private=key.priv
-key.public=key.pub
+# Save history
+save.file.address.hash=[SAVE_FILE_ADDRESS_HASH]
+save.file.transaction.hash=[SAVE_FILE_TRANSACTION_HASH]
 
-save.file.address.hash=save/address.txt
-save.file.transaction.hash=save/transaction.txt
-
-# Node param
-node.local.address=http://127.0.0.1:8080/
+# The node to use with the wallet
+node.local.address:[NODE_ADDRESS]
