--- a/pjtblockchain/package/src/main/resources/cfg/node.properties
+++ b/pjtblockchain/package/src/main/resources/cfg/node.properties
@@ -1,5 +1,3 @@
 # Node param
-#master.node.address=[MASTER_NODE_ADDRESS]
-#mining.address.hash.reward=[MINING_ADDRESS_HASH_REWARD]
-master.node.address=http://localhost:8080
-mining.address.hash.reward=
+master.node.address=[MASTER_NODE_ADDRESS]
+mining.address.hash.reward=[MINING_ADDRESS_HASH_REWARD]
