[BlockChain] Dev p2p - socket part 2

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -36,7 +36,7 @@ logging.file.name=log/blockchain.log
 # = APPLICATION
 # ==============================
 p2p.port=8081
-blockchain.known.node.host=localhost
+blockchain.known.node.host=10.17.16.87
 blockchain.known.node.port=8081
 blockchain.save.path=blockchain/
 
