--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # ==============================
 # = SPRING
 # ==============================
+# Wallet & WebApp
 server.port=8080
 
 # ==============================
