--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -37,8 +37,10 @@ logging.file.name=log/blockchain.log
 # = APPLICATION
 # ==============================
 p2p.port=8081
-blockchain.known.node.host=10.17.16.87
+blockchain.known.node.host=10.17.16.86
 blockchain.known.node.port=8081
+blockchain.accessible.host=10.17.16.86
+blockchain.accessible.port=8081
 blockchain.save.path=blockchain/
 
 
