[BlockChain] Dev p2p - node aware of network

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 # = SPRING
 # ==============================
 # Wallet & WebApp
-server.port=8080
 
 # ==============================
 # = ACTUATOR
@@ -36,13 +35,9 @@ logging.file.name=log/blockchain.log
 # ==============================
 # = APPLICATION
 # ==============================
-p2p.port=8081
+server.port=8070
+p2p.accessible.host=10.17.16.86
+p2p.port=8080
 blockchain.known.node.host=10.17.16.86
-blockchain.known.node.port=8081
-blockchain.accessible.host=10.17.16.86
-blockchain.accessible.port=8081
+blockchain.known.node.port=8080
 blockchain.save.path=blockchain/
-
-
-wallet.key.path.pub=key/key.pub
-wallet.key.path.priv=key/key.priv
