[BlockChain] Finish wallet creation and sending

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -29,16 +29,16 @@ spring.datasource.password=blockchainpass
 # ==============================
 # = LOGGING
 # ==============================
-#logging.level.root=DEBUG
+logging.level.root=DEBUG
 logging.file.name=log/blockchain.log
 
 # ==============================
 # = APPLICATION
 # ==============================
 server.port=8070
-p2p.accessible.host=10.17.16.86
+p2p.accessible.host=10.17.16.112
 p2p.port=8080
-blockchain.known.node.host=10.17.16.86
+blockchain.known.node.host=10.17.16.112
 blockchain.known.node.port=8080
 blockchain.save.path=blockchain/
 wallet.public.key.path=key/pub.key
