[BlockChain] Delete test & init wallet repos

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.h2.console.path=/h2
 spring.h2.console.settings.trace=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:~/blockchain:blockchaindb
+spring.datasource.url=jdbc:h2:file:~/lockchaindb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=blockchainapp
 spring.datasource.password=blockchainpass
 
