--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.0.BUILD-SNAPSHOT'
-	id 'org.jetbrains.kotlin.jvm' version '1.3.21'
-	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+	id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+	id 'org.jetbrains.kotlin.plugin.spring' version '1.3.31'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -18,7 +18,7 @@ repositories {
 
 dependencies {
 	// Spring
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.shell:spring-shell-starter:2.0.1.RELEASE'
 
 	// Kotlin
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
@@ -26,9 +26,6 @@ dependencies {
 
 	// Apache
 	compile 'commons-cli:commons-cli:1.4'
-
-	// Test
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 compileKotlin {
