[BlockChain] Real persistant storage and wallet

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -15,21 +15,19 @@ management.endpoint.health.show-details=always
 # = DATA BASE
 # ==============================
 spring.data.jpa.repositories.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.h2.console.settings.trace=true
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:~/lockchaindb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:file:~/blockchaindb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=blockchainapp
 spring.datasource.password=blockchainpass
+spring.jpa.hibernate.ddl-auto=update
 
 # ==============================
 # = LOGGING
 # ==============================
-logging.level.root=DEBUG
+#logging.level.root=DEBUG
 logging.file.name=log/blockchain.log
 
 # ==============================
@@ -41,5 +39,4 @@ p2p.port=8080
 blockchain.known.node.host=10.17.16.112
 blockchain.known.node.port=8080
 blockchain.save.path=blockchain/
-wallet.public.key.path=key/pub.key
-wallet.private.key.path=key/priv.key
+wallet.key.path=key/
