--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 	// Retrofit
 	implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 	implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
+	// OkHttp
+	implementation 'com.squareup.okhttp:okhttp:2.7.5'
+
 }
 
 compileKotlin {
