[Blockchain] Externalisation config

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # ==============================
 # = SPRING
-# ==============================
-# Wallet & WebApp
+# ===============================
 
 # ==============================
 # = ACTUATOR
@@ -19,7 +18,7 @@ spring.data.jpa.repositories.enabled=true
 #spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:file:~/blockchaindb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:file:./${blockchain.db.name};DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=blockchainapp
 spring.datasource.password=blockchainpass
 spring.jpa.hibernate.ddl-auto=update
@@ -29,13 +28,3 @@ spring.jpa.hibernate.ddl-auto=update
 # ==============================
 #logging.level.root=DEBUG
 logging.file.name=log/blockchain.log
-
-# ==============================
-# = APPLICATION
-# ==============================
-server.port=8070
-p2p.accessible.host=10.17.240.2
-p2p.port=8080
-blockchain.known.node.host=10.17.240.2
-blockchain.known.node.port=8080
-wallet.key.path=key/
