[Blockchain & Wallet] Optimize import

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # ==============================
 # = SPRING
 # ===============================
+spring.main.banner-mode=off
 
 # ==============================
 # = ACTUATOR
@@ -14,8 +15,6 @@ management.endpoint.health.show-details=always
 # = DATA BASE
 # ==============================
 spring.data.jpa.repositories.enabled=true
-#spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:file:./${blockchain.db.name};DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
@@ -27,4 +26,4 @@ spring.jpa.hibernate.ddl-auto=update
 # = LOGGING
 # ==============================
 #logging.level.root=DEBUG
-logging.file.name=log/blockchain.log
+logging.file.name=blockchain.log
