--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 	// Retrofit
 	implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-	implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
+	implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
 	// OkHttp
 	implementation 'com.squareup.okhttp:okhttp:2.7.5'
