[Blockchain & Wallet] Passage au keystore & finition

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -27,3 +27,9 @@ spring.jpa.hibernate.ddl-auto=update
 # ==============================
 #logging.level.root=DEBUG
 logging.file.name=blockchain.log
+
+# ==============================
+# = Key Store
+# ==============================
+keystore.name=blockchain.jks
+keystore.pass=79CYD!9d2auw$7e3@Hgdn$8c*R-xzGa93*vD+dnH+3b8?Tr4x#dGGV+-SG*?73gJ%wwk8PPvMt*p-$bey35dRsnSF-xBjkexLEn9kmPNhAm2j8X_JFYwJHz__X%Y%TNJ*QXwuNhje-pRHu$+TYCKw6dQVGy8ScWjmhqS@WByCN_qFFFgz==x^dzSzD%yGQ-Mg8^8c!B+MJ&usR2y%GKnkm%8GBQWy5km-jC=qdS4S*y5PGuY_ZHs925@MNnywmfwxJuPE9V4Bp8d7P=C3usdqkB^Cu+wZwJfx9FM6hVY@*MedPfN_7hqM?TP-9sQpuUbw5Eb%e$Pb$+Epj+RmLFrH%kja2^&%c?A5Y+267p!XNL#X_5CH2c2gDTPHdjb7ZvgpZzu7h$zR!^dkBg?+-mvu=t9aY4BTdXpQMJ52NuELS3BK^XtP$LTJKKAxr9eD7vh3qB8vtgBBdY8_5ZxW4kwr@-&?+dVaRF5_DMa&dPQ6rqV%Z&Lq?8apq+LqbaL8WhW5X-FGCBRz3EQEmjhdpFgaBMQLvn+ZwmGz@h8!wbGKS_y#RNNvVC87tcUQ9VuRSh2E3h7!pf^tR@SbW*AwFgZR_Jh!@4FsvakgVwuTMgZpn7?$&%M+fx=m3e%nDUg_x6qT_qsZt2c5DzvyJEx+bPgq-M^C?537U84ZSzpVm*pQSD^A=c#f8hB$g*&bjddJbkBv-!ZZquwAHff#eCQ9v-6J9%!=fCY^p_^x#&Xy9ZLyUFZ8c#&gKKAZsNeMP4ws2%Euv5wMrnkB=ybaZ%4s9qRS@DdSap%Djt3JLR+tQ8X$H?w98LfLJfDh#6akWsHwyx!v38eypBeQUvkj^mKbT$muSd%5Zxna4JP7Zhk_USAr+wTTj*T@f=eW=dGssjTRBNG7Nd9wJAMyy&zNvyj^CU-*ysn7PX94mnQq27YB2cTu7AfA=vYwb5PnUUyKRWLKZRjbgJJ*#p6aSx2-&eXzNS%BQrtMe+Mq7&CxX7n^F%VVdCz=A72#esU^M6z67^$xhhD
