--- a/website/angular.json
+++ b/website/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "progress": true,
             "extractCss": true,
-            "outputPath": "dist",
+            "outputPath": "../blockchain/src/main/resources/static",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
