Ajout banniere au lancement

--- a/blockchain/src/main/resources/application.properties
+++ b/blockchain/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 # ==============================
 # = SPRING
 # ===============================
-spring.main.banner-mode=off
+spring.main.banner-mode=console
+#spring.webflux.static-path-pattern=/static/**
+#spring.mvc.static-path-pattern=/static/**
+#spring.resources.static-locations=classpath:/static/
 
 # ==============================
 # = ACTUATOR
